--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.3",
+    "@twemoji/api": "^17.0.2",
     "next": "^16.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
