画像をwebPに変換するように変更

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@twemoji/api": "^17.0.2",
     "next": "^16.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/node": "^22",
